--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "memory-cache": "^0.2.0",
     "mongoose": "^8.3.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
   },
